2019xcor. match Sxy(z) H(z) Syy(z) Sxx(z) statement with proof

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -193,9 +193,9 @@ $\begin{array}{|Mc        l       c l@{\hspace{0pt}}c D   l         c l@{\hspace
 \end{proposition}
 \begin{proof}
 \begin{align*}
-  (1)-(4):\,\ZSyx(z)
+  (1)-(4):\,\Szyx(z)
      &\eqd \opZ \Ryx(m)
-    && \text{by definition of $\ZSxy(z)$}                          && %\text{\xref{def:csd}}
+    && \text{by definition of $\Szxy(z)$}                          && %\text{\xref{def:csd}}
   \\&\eqd \sum_{m\in\Z}\Ryx(m) z^{-m}
     && \text{by definition of $\opZ$}                              && \text{\xref{def:opZ}}
   \\&\eqd \sum_{m\in\Z} \Rxy^\ast(-m) z^{-m}
@@ -207,27 +207,25 @@ $\begin{array}{|Mc        l       c l@{\hspace{0pt}}c D   l         c l@{\hspace
   \\&= \brs{\sum_{p\in\Z} \Rxy(p) (z^\ast)^{p}}^\ast
     && \text{by \prope{absolutely summable} property}             %&& \text{\xref{def:spllR}}
   \\&= \brs{\sum_{p\in\Z} \Rxy(p) \brp{\frac{1}{z^\ast}}^{-p}}^\ast
-  \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}}
-    && \text{by definition of $\opZ$}                              && \text{\xref{def:opZ}}
+  \\&= \Szxy^\ast\brp{\frac{1}{z^\ast}}
+    && \text{by definition of $\Szxy$}                             && \text{\xref{def:Szxy}}
 \end{align*}
 \begin{align*}
-  (1)-(4):\,\ZSxx(z)
-    &\eqd \brlr{\ZSxy(z)}_{\rvy=\rvx}
-   &&= \brlr{\ZSyx^\ast(z)}_{\rvy=\rvx}
-   &&= \brlr{\ZSxy^\ast\brp{\frac{1}{z^\ast}}}_{\rvy=\rvx}
-   &&= \ZSxx^\ast\brp{\frac{1}{z^\ast}}
+  (1)-(4):\,\Szxx(z)
+    &\eqd \brlr{\Szyx(z)}_{\rvy=\rvx}
+   &&= \brlr{\Szxy^\ast\brp{\frac{1}{z^\ast}}}_{\rvy=\rvx}
+   &&= \Szxx^\ast\brp{\frac{1}{z^\ast}}
   \\
-  (5)-(8):\,\ZSyx(z)
+  (5)-(8):\,\Szyx(z)
     &= \sum_{m\in\Z} \Rxy(-m) z^{-m}
    &&= \sum_{-p\in\Z} \Rxy(p) z^{p}
    &&= \sum_{p\in\Z} \Rxy(p) \brp{\frac{1}{z}}^{-p}
-   &&= \ZSxy\brp{\frac{1}{z}}
+   &&= \Szxy\brp{\frac{1}{z}}
   \\
-  (5)-(8):\,\ZSxx(z)
-    &= \brlr{\ZSxy(z)}_{\rvy=\rvx}
-   &&= \brlr{\ZSyx(z)}_{\rvy=\rvx}
-   &&= \brlr{\ZSxy\brp{\frac{1}{z}}}_{\rvy=\rvx}
-   &&= \ZSxx\brp{\frac{1}{z}}
+  (5)-(8):\,\Szxx(z)
+    &= \brlr{\Szyx(z)}_{\rvy=\rvx}
+   &&= \brlr{\Szxy\brp{\frac{1}{z}}}_{\rvy=\rvx}
+   &&= \Szxx\brp{\frac{1}{z}}
 \end{align*}
 \end{proof}
 
@@ -237,9 +235,10 @@ $\begin{array}{|Mc        l       c l@{\hspace{0pt}}c D   l         c l@{\hspace
 \label{prop:Swxx_real}
 %---------------------------------------
 Let (1)--(8) correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
-$\begin{array}{|M           c         r                   c  l               M|}
+\\
+$\begin{array}{|M           c         l               Ml|}
   \hline
-    (1), (2), (3), or (4) & \implies& \Swxx^\ast(\omega) &=& \Swxx(\omega) & (\prope{real-valued})
+    \{(1), (2), (3), or (4)\} & \implies& \{\Swxx^\ast(\omega)=\Swxx(\omega) & (\prope{real-valued})&\}
   \\\hline
 \end{array}$
 \end{proposition}
@@ -263,14 +262,14 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
 \\
 $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{0pt}}l         D    l         c  l       *{3}{@{\hspace{0pt}}l}                                 c  l       *{5}{@{\hspace{0pt}}l}|}
   \hline
-    (1) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy     &(z)                    &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx     &(z)
-  \\(2) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(3) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx\brp{z}           &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(4) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(5) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(6) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(7) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z)               &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
-  \\(8) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)               &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+    (1) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx\brp{\frac{1}{z^\ast}} &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy     &(z)                    &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\(2) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)                    &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &(z)               &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\(3) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z)                    &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}      &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH^\ast&\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\(4) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)                    &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy^\ast&\brp{\frac{1}{z^\ast}} &=& \ZH     &\brp{\frac{1}{z}} &\ZH^\ast&\brp{z^\ast}           &\Szxx^\ast&\brp{\frac{1}{z^\ast}}
+  \\(5) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z)                    &and& \Szyy(z) &=& \ZH     &(z)               &\Szxy     &\brp{\frac{1}{z}}      &=& \ZH     &(z)               &\ZH     &\brp{\frac{1}{z}}      &\Szxx     &\brp{\frac{1}{z}}
+  \\(6) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)                    &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy     &\brp{\frac{1}{z}}      &=& \ZH     &\brp{\frac{1}{z}} &\ZH     &(z)                    &\Szxx     &\brp{\frac{1}{z}}
+  \\(7) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z)                    &and& \Szyy(z) &=& \ZH^\ast&(z^\ast)          &\Szxy     &\brp{\frac{1}{z}}      &=& \ZH^\ast&\brp{z^\ast}      &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx     &\brp{\frac{1}{z}}
+  \\(8) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)                    &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}} &\Szxy     &\brp{\frac{1}{z}}      &=& \ZH     &\brp{\frac{1}{z}} &\ZH     &(z)                    &\Szxx     &\brp{\frac{1}{z}}
   \\\hline
 \end{array}$
 %}
@@ -297,7 +296,7 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
       && \text{by definitions of $\ZH$ and $\Szxt$}
     \\
     \boxed{\Szxy(z)}
-      &=\mcom{\Szyx^\ast\brp{\frac{1}{z^\ast}}}{by \prefpp{thm:ZSxy_sym}}
+      &=\mcom{\Szyx^\ast\brp{\frac{1}{z^\ast}}}{by \prefpp{prop:Szxy}}
      &&\eqd \brlr{\Szyt^\ast\brp{\frac{1}{z^\ast}}}_{\rvt\eqd\rvx}
      &&=\boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
      \\
@@ -321,7 +320,7 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
     \boxed{\Szxy(z)}
       &\eqd \brlr{\Szty}_{\rvt=\rvx}
      &&=    \brlr{\ZH(z) \Sztx(z)}_{\rvt=\rvx}
-     &&=    \ZH(z) \Szxx(z)
+     &&=    \boxed{\ZH(z) \Szxx(z)}
      \\
     \boxed{\Szyy(z)}
       &\eqd \brlr{\Szty(z)}_{\rvt\eqd\rvy}
@@ -356,11 +355,11 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
     (4).\quad\Szty(z)
       &\eqd \opZ\Rxy(m)
      &&\eqd \opZ\pE\brs{\rvt^\ast(m)\rvy(0)}
-     &&=    \opZ\pE\brs{\rvt^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
-    \\&=    \opZ\sum_{k\in\Z} \fh(k)\pE\brs{\rvt^\ast(m)\rvx(0-k)}
+    \\&=    \opZ\pE\brs{\rvt^\ast(m)\sum_{k\in\Z} \fh(k)           \rvx(0-k)}
+     &&=    \opZ\sum_{k\in\Z} \fh(k)\pE\brs{\rvt^\ast(m)\rvx(0-k)}
      &&=    \opZ\sum_{k\in\Z} \fh(k)\pE\brs{\rvt^\ast(m+k)\rvx(0)}
-     &&=    \opZ\sum_{k\in\Z} \fh(k)\Rtx(m+k)
-    \\&=    \opZ\sum_{k'\in\Z} \fh(-k')\Rtx(m-k')
+    \\&=    \opZ\sum_{k\in\Z} \fh(k)\Rtx(m+k)
+     &&=    \opZ\sum_{k'\in\Z} \fh(-k')\Rtx(m-k')
       && \text{where $k'\eqd k$}
     \\&\eqd \opZ\brs{\fh(-m) \convd \Rtx(m)}
      &&= \brs{\opZ\fh(-m)} \brs{\opZ\Rtx(m)}
@@ -397,8 +396,8 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
      &&= \brlr{\ZH(z) \Sztx(z)}_{\rvt=\rvy}
      &&= \ZH(z) \Szyx(z)
-    \\&= \boxed{\ZH(z) \Szxy^\ast\brp{\frac{1}{z^\ast}}}
-     &&= \boxed{\ZH(z) \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
+    \\&= \boxed{\ZH(z) \Szxy\brp{\frac{1}{z}}}
+     &&= \boxed{\ZH(z) \ZH\brp{\frac{1}{z}} \Szxx\brp{\frac{1}{z}}}
 \\
    (6).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
@@ -421,8 +420,8 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
      &&= \brlr{\ZH\brp{\frac{1}{z}} \Sztx(z)}_{\rvt=\rvy}
      &&= \ZH\brp{\frac{1}{z}} \Szyx(z)
-    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
-     &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH^\ast\brp{z^\ast} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
+    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy\brp{\frac{1}{z}}}
+     &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH\brp{z} \Szxx\brp{\frac{1}{z}}}
 \\
     (7).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
@@ -444,8 +443,8 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
      &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx(z)}_{\rvt=\rvy}
      &&= \ZH^\ast\brp{z^\ast} \Szyx(z)
-    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
-     &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
+    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy\brp{\frac{1}{z}}}
+     &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{\frac{1}{z}}}
 \\
     (8).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
@@ -470,8 +469,8 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l        @{\hspace{
       &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
      &&= \brlr{\ZH\brp{\frac{1}{z}} \Sztx(z)}_{\rvt=\rvy}
      &&= \ZH\brp{\frac{1}{z}} \Szyx(z)
-    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
-     &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH^\ast\brp{z^\ast} \Szxx^\ast\brp{\frac{1}{z^\ast}}}
+    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy\brp{\frac{1}{z}}}
+     &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH\brp{z} \Szxx\brp{\frac{1}{z}}}
   \end{align*}
 \end{proof}
 
