2019xcordef. Sxy(w) work in progress

--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -275,7 +275,7 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l@{\hspace{0pt}}l  
   \\(4) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z) &and& \Szyy(z) &=& \ZH^\ast&\brp{z^\ast}           &\Szxy(z) &=& \ZH^\ast      &\brp{z^\ast}      &\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
   \\(5) &      \implies& \Szxy(z) &=&\ZH     &(z)                    &\Szxx(z) &and& \Szyy(z) &=& \ZH     &\brp{\frac{1}{z}}      &\Szxy(z) &=& \ZH           &(z)               &\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
   \\(6) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z) &and& \Szyy(z) &=& \ZH     &(z)                    &\Szxy(z) &=& \ZH           &(z)               &\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
-  \\(7) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z) &and& \Szyy(z) &=& \ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxy\brp{\frac{1}{z}} &=& \ZH^\ast      &\brp{z^\ast}      &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx(z)
+  \\(7) &      \implies& \Szxy(z) &=&\ZH^\ast&\brp{z^\ast}           &\Szxx(z) &and& \Szyy(z) &=& \ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxy(z) &=& \ZH^\ast      &\brp{z^\ast}      &\ZH^\ast&\brp{\frac{1}{z^\ast}} &\Szxx(z)
   \\(8) &      \implies& \Szxy(z) &=&\ZH     &\brp{\frac{1}{z}}      &\Szxx(z) &and& \Szyy(z) &=& \ZH     &(z)                    &\Szxy(z) &=& \ZH           &(z)               &\ZH     &\brp{\frac{1}{z}}      &\Szxx(z)
   \\\hline
 \end{array}$
@@ -440,9 +440,8 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l@{\hspace{0pt}}l  
 \\
     (7).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
-     &&\eqd \opZ\pE\brs{\rvt^\ast(0)\rvy^\ast(m)}
-     &&=    \opZ\pE\brs{\rvt^\ast(0)\rvy^\ast(m)}
-    \\&=    \opZ\pE\brs{\rvt^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
+       \eqd \opZ\pE\brs{\rvt^\ast(0)\rvy^\ast(m)}
+     &&=    \opZ\pE\brs{\rvt^\ast(0)\brp{\sum_{k\in\Z} \fh(k) \rvx(m-k)}^\ast}
      &&=    \opZ                    \sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(0)\rvx^\ast(m-k)}
      &&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx(m-k)
     \\&\eqd \opZ\brs{\fh^\ast(m) \convd \Rtx(m)}
@@ -455,37 +454,51 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l@{\hspace{0pt}}l  
      &&= \boxed{\ZH^\ast\brp{z^\ast} \Szxx(z)}
     \\
     \boxed{\Szyy(z)}
-      &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
-     &&= \brlr{\ZH^\ast\brp{z^\ast} \Sztx(z)}_{\rvt=\rvy}
-     &&= \ZH^\ast\brp{z^\ast} \Szyx(z)
-    \\&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy\brp{\frac{1}{z}}}
-     &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx\brp{\frac{1}{z}}}
+      &= \Szyy\brp{\frac{1}{z}}
+      \eqd \brlr{\Szty\brp{\frac{1}{z}}}_{\rvt=\rvy}
+     &&= \brlr{\ZH^\ast\brp{\frac{1}{z^\ast}} \Sztx\brp{\frac{1}{z}}}_{\rvt=\rvy}
+     &&= \ZH^\ast\brp{\frac{1}{z^\ast}} \Szyx\brp{\frac{1}{z}}
+    \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxy(z)}
+     &&= \ZH^\ast\brp{\frac{1}{z^\ast}} \ZH^\ast\brp{z^\ast} \Szxx(z)
+     &&= \boxed{ \ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}}\Szxx(z)}
+%20190509%\\
+%20190509%    (8).\quad\Szty(z)
+%20190509%      &\eqd \opZ\Rty(m)
+%20190509%     &&\eqd \opZ\pE\brs{\rvt^\ast(m)\rvy^\ast(0)}
+%20190509%       \mathrlap{\qquad=    \opZ\pE\brs{\rvt^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}}
+%20190509%    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(m)\rvx^\ast(-k)}
+%20190509%     &&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(0)\rvx^\ast(-m-k)}
+%20190509%    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(-m-k)\rvx^\ast(0)}
+%20190509%     &&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx^\ast(-m-k)
+%20190509%     &&=    \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx(m+k)
+%20190509%    \\&\eqd \opZ\brs{\fh(-m) \convd \Rtx(m)}
+%20190509%     &&= \opZ\brs{\fh(-m) \convd \Rtx(m)}
+%20190509%     &&= \brs{\opZ\fh(-m)} \brs{\opZ\Rtx(m)}
+%20190509%    \\&= \ZH\brp{\frac{1}{z}} \Sztx(z)
 \\
-    (8).\quad\Szty(z)
-      &\eqd \opZ\Rty(m)
-     &&\eqd \opZ\pE\brs{\rvt^\ast(m)\rvy^\ast(0)}
-       \mathrlap{\qquad=    \opZ\pE\brs{\rvt^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}}
-    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(m)\rvx^\ast(-k)}
-     &&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(0)\rvx^\ast(-m-k)}
-    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(-m-k)\rvx^\ast(0)}
-     &&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx^\ast(-m-k)
-     &&=    \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx(m+k)
-    \\&\eqd \opZ\brs{\fh(-m) \convd \Rtx(m)}
-     &&= \opZ\brs{\fh(-m) \convd \Rtx(m)}
-     &&= \brs{\opZ\fh(-m)} \brs{\opZ\Rtx(m)}
-    \\&= \ZH\brp{\frac{1}{z}} \Sztx(z)
+    (8).\quad\Szyt(z)
+      &\eqd \opZ\Ryt(m)
+     &&\eqd \opZ\pE\brs{\rvy^\ast(m)\rvt^\ast(0)}
+       \mathrlap{\qquad=    \opZ\pE\brs{\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(m-k)}\rvt^\ast(0)}}
+    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvx^\ast(m-k)\rvt^\ast(0)}
+     &&\eqd \opZ\sum_{k\in\Z} \fh^\ast(k) \Rxt(m-k)
+    \\&\eqd \opZ\brs{\fh(m) \convd \Rxt(m)}
+     &&= \opZ\brs{\fh(m) \convd \Rxt(m)}
+     &&= \brs{\opZ\fh(m)} \brs{\opZ\Rxt(m)}
+    \\&= \ZH(z) \Szxt(z)
     \\
     \boxed{\Szxy(z)}
-      &\eqd \brlr{\Szty(z)}_{\rvt=\rvx}
-     &&= \brlr{\ZH\brp{\frac{1}{z}} \Sztx(z)}_{\rvt=\rvx}
+      &= \Szyx\brp{\frac{1}{z}}
+       \eqd \brlr{\Szyt\brp{\frac{1}{z}}}_{\rvt=\rvx}
+     &&= \brlr{\ZH\brp{\frac{1}{z}} \Szxt\brp{\frac{1}{z}}}_{\rvt=\rvx}
+       = \ZH\brp{\frac{1}{z}} \Szxx\brp{\frac{1}{z}}
      &&= \boxed{\ZH\brp{\frac{1}{z}} \Szxx(z)}
     \\
     \boxed{\Szyy(z)}
-      &\eqd \brlr{\Szty(z)}_{\rvt=\rvy}
-     &&= \brlr{\ZH\brp{\frac{1}{z}} \Sztx(z)}_{\rvt=\rvy}
-     &&= \ZH\brp{\frac{1}{z}} \Szyx(z)
-    \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy\brp{\frac{1}{z}}}
-     &&= \boxed{\ZH\brp{\frac{1}{z}} \ZH\brp{z} \Szxx\brp{\frac{1}{z}}}
+      &\eqd \brlr{\Szyt(z)}_{\rvt=\rvy}
+     &&= \brlr{\ZH(z) \Szxt(z)}_{\rvt=\rvy}
+       = \boxed{\ZH(z) \Szxy(z)}
+     &&= \boxed{\ZH(z) \ZH\brp{\frac{1}{z}} \Szxx(z)}
   \end{align*}
 \end{proof}
 
@@ -508,14 +521,14 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
 \\
 $\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l@{\hspace{0pt}}r@{\hspace{0pt}}l@{\hspace{0pt}}r|}
   \hline
-    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &( \omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
-  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&( \omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
-  \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
-  \\(4) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
-  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&( \omega) &=& |\FH&( \omega)|^2 &\Swxx^\ast&(\omega)
-  \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
-  \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
-  \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&( \omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
+    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy     &(\omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy     &(\omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy     &(\omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&( \omega)|^2 &\Swxx^\ast&(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
   \\\hline
 \end{array}$
 \end{proposition}
