2019xcordef. Sxy(w) real x,y work in progress

--- a/2019xcor/intro.tex
+++ b/2019xcor/intro.tex
@@ -12,7 +12,12 @@ $\Swxy(\omega)$, %\xref{def:Swxy}.
 which is defined as the \ope{Discrete-time Fourier Transform} of $\Rxy(m)$,
 as well as the more general $\Szxy(z)$,
 which is defined as the \ope{Z-Transform} of $\Rxy(m)$:
-\begin{definition}\label{def:Swxy}\label{def:Szxy}
+%---------------------------------------
+\begin{definition}
+\label{def:Swxy}
+\label{def:Szxy}
+\label{def:dtft}
+%---------------------------------------
 \defbox{
   \Szxy(z)       \eqd \opZ\Rxy(m) \eqd \sum_{m\in\Z}\Rxy(m) z^{-m}
   \qquad\qquad
