--- a/2019xcor/xcordef.tex
+++ b/2019xcor/xcordef.tex
@@ -250,14 +250,13 @@ $\begin{array}{|M           c         l               Ml|}
 \end{array}$
 \end{proposition}
 \begin{proof}
-{\begin{align*}
+\begin{align*}
   \Swxx^\ast(\omega)
     &= \brlr{\Szxx^\ast\brp{z}}_{z=e^{i\omega}}
-  \\&= \brlr{\Szxx^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
-  \\&= \brlr{\Szxx\brp{z}}_{z=e^{i\omega}}
-    && \text{by \prefp{prop:Szxy}}
-  \\&= \Swxx(\omega)
-\end{align*}}
+   &&= \brlr{\Szxx^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+   && \mcom{=\brlr{\Szxx\brp{z}}_{z=e^{i\omega}}}{by \pref{prop:Szxy}}
+   &&= \Swxx(\omega)
+\end{align*}
 \end{proof}
 
 %---------------------------------------
@@ -461,20 +460,6 @@ $\begin{array}{|Fc        l         c l       @{\hspace{0pt}}l@{\hspace{0pt}}l  
     \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxy(z)}
      &&= \ZH^\ast\brp{\frac{1}{z^\ast}} \ZH^\ast\brp{z^\ast} \Szxx(z)
      &&= \boxed{ \ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}}\Szxx(z)}
-%20190509%\\
-%20190509%    (8).\quad\Szty(z)
-%20190509%      &\eqd \opZ\Rty(m)
-%20190509%     &&\eqd \opZ\pE\brs{\rvt^\ast(m)\rvy^\ast(0)}
-%20190509%       \mathrlap{\qquad=    \opZ\pE\brs{\rvt^\ast(m)\brp{\sum_{k\in\Z} \fh^\ast(k) \rvx^\ast(0-k)}}}
-%20190509%    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(m)\rvx^\ast(-k)}
-%20190509%     &&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(0)\rvx^\ast(-m-k)}
-%20190509%    \\&=    \opZ\sum_{k\in\Z} \fh^\ast(k) \pE\brs{\rvt^\ast(-m-k)\rvx^\ast(0)}
-%20190509%     &&\eqd \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx^\ast(-m-k)
-%20190509%     &&=    \opZ                    \sum_{k\in\Z} \fh^\ast(k) \Rtx(m+k)
-%20190509%    \\&\eqd \opZ\brs{\fh(-m) \convd \Rtx(m)}
-%20190509%     &&= \opZ\brs{\fh(-m) \convd \Rtx(m)}
-%20190509%     &&= \brs{\opZ\fh(-m)} \brs{\opZ\Rtx(m)}
-%20190509%    \\&= \ZH\brp{\frac{1}{z}} \Sztx(z)
 \\
     (8).\quad\Szyt(z)
       &\eqd \opZ\Ryt(m)
@@ -519,16 +504,16 @@ by the use of \pref{prop:Szxy}. For example, (1) in \pref{prop:RxySzxy} can be s
 %---------------------------------------
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
 \\
-$\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l@{\hspace{0pt}}r@{\hspace{0pt}}l@{\hspace{0pt}}r|}
+$\begin{array}{|Fc        l              c l       *{3}{@{\hspace{0pt}}r}       D    l              c  l*{3}{@{\hspace{0pt}}l}            c  l*{5}{@{\hspace{0pt}}l}|}
   \hline
-    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
-  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy     &(\omega) &=& |\FH&( \omega)|^2 &\Swxx     &(\omega)
-  \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy     &(\omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
-  \\(4) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy     &(\omega) &=& |\FH&(-\omega)|^2 &\Swxx     &(\omega)
-  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&( \omega)|^2 &\Swxx^\ast&(\omega)
-  \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
-  \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
-  \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-\omega)&\Swxy^\ast&(\omega) &=& |\FH&(-\omega)|^2 &\Swxx^\ast&(\omega)
+    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( &\omega)&\Swxy(\omega) &=& |&\FH     &( &\omega)|^2     &          &\Swxx(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( &\omega)&\Swxy(\omega) &=& |&\FH     &( &\omega)|^2     &          &\Swxx(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH^\ast&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-&\omega)&\Swxy(\omega) &=& |&\FH     &(-&\omega)|^2     &          &\Swxx(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH     &(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&(-&\omega)&\Swxy(\omega) &=& |&\FH     &(-&\omega)|^2     &          &\Swxx(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &(-&\omega)&\Swxy(\omega) &=&  &\FH     &( &\omega)\FH     &(-\omega) &\Swxx(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH     &(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( &\omega)&\Swxy(\omega) &=&  &\FH     &( &\omega)\FH     &(-\omega) &\Swxx(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH^\ast&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( &\omega)&\Swxy(\omega) &=&  &\FH^\ast&( &\omega)\FH^\ast&(-\omega) &\Swxx(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH     &(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( &\omega)&\Swxy(\omega) &=&  &\FH     &( &\omega)\FH     &(-\omega) &\Swxx(\omega)
   \\\hline
 \end{array}$
 \end{proposition}
@@ -539,7 +524,7 @@ $\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       
     \\&= \brlr{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx(z)}_{z=e^{i\omega}}
       && \text{by $\Szxy(z)$ result}         &&    \text{\xref{prop:RxySzxy}}
     \\&= \ZH^\ast\brp{e^{i\omega}} \Szxx\brp{e^{i\omega}}
-      && \text{(evaluation around unit circle in $z$-plane)}
+      && \mathrlap{\text{(evaluation around unit circle in $z$-plane)}}
     \\&= \boxed{\FH^\ast(\omega) \Swxx(\omega)}
       && \text{by definition of \ope{DTFT}}  &&    \text{\xref{def:dtft}}
     \\
@@ -548,7 +533,7 @@ $\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       
     \\&= \brlr{\ZH(z) \Szxy(z)}_{z=e^{i\omega}}
       && \text{by $\Szxy(z)$ result}         &&    \text{\xref{prop:RxySzxy}}
     \\&= \ZH\brp{e^{i\omega}} \Szxy\brp{e^{i\omega}}
-      && \text{(evaluation around unit circle in $z$-plane)}
+      && \mathrlap{\text{(evaluation around unit circle in $z$-plane)}}
     \\&= \boxed{\FH(\omega) \Swxy(\omega)}
       && \text{by definition of \ope{DTFT}}  &&    \text{\xref{def:dtft}}
     \\
@@ -557,41 +542,73 @@ $\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       
     \\&= \brlr{\ZH(z) \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
       && \text{by $\Szxy(z)$ result}         &&    \text{\xref{prop:RxySzxy}}
     \\&= \ZH\brp{e^{i\omega}} \ZH^\ast\brp{\frac{1}{e^{-i\omega}}} \Szxx^\ast\brp{\frac{1}{e^{-i\omega}}}
-    \\&=\mathrlap{ 
-         \ZH\brp{e^{i\omega}} \ZH^\ast\brp{e^{i\omega}} \Szxx^\ast\brp{e^{i\omega}}
-       = \FH\brp{\omega} \FH^\ast(\omega) \Swxx^\ast(\omega)
-       = \abs{\FH\brp{\omega}}^2 \Swxx^\ast(\omega)}
+    \\&= \ZH\brp{e^{i\omega}} \ZH^\ast\brp{e^{i\omega}} \Szxx^\ast\brp{e^{i\omega}}
+     &&= \FH\brp{\omega} \FH^\ast(\omega) \Swxx^\ast(\omega)
+     &&= \abs{\FH\brp{\omega}}^2 \Swxx^\ast(\omega)
     \\&= \boxed{\abs{\FH\brp{\omega}}^2 \Swxx(\omega)}
       && \text{because $\Swxx(\omega)$ is \prope{real-valued}}  
-      && \text{\xref{cor:Swxy_sym}}
+      && \text{\xref{prop:Swxx_real}}
 \end{align*}
 
 The other seven sets of proofs follow in like manner.
 \end{proof}
-
 
 %---------------------------------------
 \begin{proposition}
 \label{prop:RxySwxy_real}
 %---------------------------------------
 Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
-\\\textbf{If} $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold:
+\\If $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued}, then the following hold (!!! may not be true !!!):
 \\
-$\begin{array}{|Fc        l              c l       *{2}{@{\hspace{0pt}}r}       D    l              c  l@{\hspace{0pt}}r *{2}{@{\hspace{0pt}}l} c  l*{2}{@{\hspace{0pt}}r}|}
+$\begin{array}{|Fc        l              c l       *{3}{@{\hspace{0pt}}r}       D    l              c  l*{3}{@{\hspace{0pt}}l}            c  l*{5}{@{\hspace{0pt}}l}|}
   \hline
-    (1) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy     &(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(2) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(3) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(4) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(5) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(6) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(7) &      \implies& \Swxy(\omega) &=&\FH     &( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH     &( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
-  \\(8) &      \implies& \Swxy(\omega) &=&\FH^\ast&( \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH^\ast&( \omega)&\Swxy^\ast&(\omega) &=& |\FH&(\omega)|^2 &\Swxx(\omega)
+    (1) &      \implies& \Swxy(\omega) &=&\FH&(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&( &\omega)|^2 &          &\Swxx(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH&(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&( &\omega)|^2 &          &\Swxx(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=& |&\FH&(-&\omega)|^2 &          &\Swxx(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=& |&\FH&(-&\omega)|^2 &          &\Swxx(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH&(& \omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=&  &\FH&( &\omega)\FH &(-\omega) &\Swxx(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=&  &\FH&( &\omega)\FH &(-\omega) &\Swxx(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=&  &\FH&( &\omega)\FH &(-\omega) &\Swxx(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH&(&-\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=&  &\FH&( &\omega)\FH &(-\omega) &\Swxx(\omega)
   \\\hline
 \end{array}$
 \end{proposition}
 \begin{proof}
-These results follow directly from \pref{prop:RxySwxy} and \prefpp{thm:dtft_conjneg_real}.
+These results follow directly from \pref{prop:RxySwxy} and from the fact that 
+for \prope{real-valued} $\rvx(n)$ and $\rvy(n)$,
+$\Swxy^\ast(\omega)=\Swxy(\omega)$.
+\end{proof}
+
+%---------------------------------------
+\begin{proposition}
+\label{prop:RxySwxy_real}
+%---------------------------------------
+Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def:Rxym}.
+\\If $\rvx(n)$ and $\rvy(n)$ are \propb{real-valued} and $\fh(n)$ is \propb{real-valued}, then the following hold (!!! may not be true!!!):
+\\
+$\begin{array}{|Fc        l              c l           @{\hspace{0pt}}r D    l              c  l*{3}{@{\hspace{0pt}}l}            c  l*{3}{@{\hspace{0pt}}l}|}
+  \hline
+    (1) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(2) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(3) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(4) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(5) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&(-&\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(6) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(7) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\(8) &      \implies& \Swxy(\omega) &=&\FH(\omega) &\Swxx(\omega)   &and& \Swyy(\omega) &=& \FH&( &\omega)&\Swxy(\omega) &=& |&\FH&(\omega)|^2 &\Swxx(\omega)
+  \\\hline
+\end{array}$
+\end{proposition}
+\begin{proof}
+These results follow directly from \pref{prop:RxySwxy}, \pref{prop:RxySwxy_real}, and from the fact that 
+for \prope{real-valued} $\fh(n)$
+\begin{align*}
+  \FH^\ast(\omega)
+    &\eqd \brp{\sum_{n\in\Z} \fh(n) e^{-i\omega n} }^\ast
+   &&=    \sum_{n\in\Z} \fh^\ast(n) e^{i\omega n}
+   &&=    \sum_{n\in\Z} \fh(n) e^{-i(-\omega) n}
+   &&\eqd \FH(-\omega)
+\end{align*}
 \end{proof}
 
 %=======================================
